2013-01-12  Colin Watson  <cjwatson@ubuntu.com>

	Clean up dangling references to grub-setup.
	Fixes Ubuntu bug #1082045.

	* docs/grub.texi (Images): Refer generally to grub-install rather
	than directly to grub-setup.
	(Installing GRUB using grub-install): Remove direct reference to
	grub-setup.
	(Device map) Likewise.
	(Invoking grub-install): Likewise.
	* docs/man/grub-install.h2m (SEE ALSO): Likewise.
	* docs/man/grub-mkimage.h2m (SEE ALSO): Likewise.
	* util/grub-install.in (usage): Likewise.

	* util/bash-completion.d/grub-completion.bash.in (_grub_setup):
	Apply to grub-bios-setup and grub-sparc64-setup rather than to
	grub-setup.
	* configure.ac: Remove grub_setup output variable.

	* docs/man/grub-bios-setup.h2m (NAME): Change name from grub-setup
	to grub-bios-setup.
	* docs/man/grub-sparc64-setup.h2m (NAME): Change name from
	grub-setup to grub-sparc64-setup.

2013-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Import gcrypt public-key cryptography and implement signature checking.

2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ntfs.c: Ue more appropriate types.
	* grub-core/fs/ntfscomp.c: Likewise.
	* include/grub/ntfs.h: Likewise.

2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Support Apple FAT binaries on non-Apple platforms.

	* include/grub/macho.h (GRUB_MACHO_FAT_EFI_MAGIC): New define.
	* include/grub/i386/macho.h (GRUB_MACHO_CPUTYPE_IS_HOST_CURRENT):
	Likewise.
	* grub-core/loader/efi/chainloader.c (grub_cmd_chainloader): Parse
	Apple FAT binaries.

2013-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/disk.c (grub_disk_write): Fix sector number on 4K
	sector devices.

2013-01-07  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/io/bufio.c (grub_bufio_open): Use grub_zalloc instead of
	explicitly zeroing elements.
	* grub-core/io/gzio.c (grub_gzio_open): Likewise.
	* grub-core/io/lzopio.c (grub_lzopio_open): Remove explicit zeroing